--- a/app/templates/addtoHoldings.html
+++ b/app/templates/addtoHoldings.html
@@ -15,43 +15,58 @@
     {# application content needs to be provided in the app_content block #}
     {% block app_content %}{% endblock %}
 </div>
+{% if test_cfp %}
+<div class="container">  
+    {%  for val in current_mf  %}
+    <h3> Current Mutual Fund:  {{  val.name  }}</h3>
+    <ul>
+        <li>Dollar Amount Available: {{  val.dollars_available  }} </li> 
+    </ul>
 
-<div class="table-responsive" >
-<table class="table">
-    <thead>
-        <tr>
-            <th>  id  </th>
-            <th>  ticker_symbol  </th>
-            <th>  legal_name  </th>
-            <th>  total_shares_circulation  </th>
-            <th>  total_shares_available  </th>
-            <th>  initial_price  </th>
-            <th>  current_price  </th>
-            <th>  Sector  </th>
-            <th>  Add to Mutual Fund  </th>
-        </tr>
-    </thead>
-    <tbody>
-        {% if data %} 
-        {% for s_row in results %}
-            <tr>
-                <td>{{  s_row.id  }}</td>
-                <td>{{  s_row.ticker_symbol  }}</td>
-                <td>{{  s_row.legal_name  }}</td>
-                <td>{{  s_row.total_shares_circulation  }}</td>
-                <td>{{  s_row.total_shares_available  }}</td>
-                <td>{{  s_row.initial_price  }}</td>
-                <td>${{ s_row.current_price  }}</td>
-                <td>{{  s_row.sector_id  }}</td>
-                <td>
-                    <a href="{{url_for('addtoHoldings', id=s_row.id, pid=pid)}}">
-                        <button type="button">  Add  </button></a>
-                </td>
-            </tr>
-        {% endfor %}
-        {% endif %}
-    </tbody>
-</table>
+    
+    {%  endfor  %}
 </div>
+{%  endif  %}
+<div class="container">
+    <div class="table-responsive" >
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>  id  </th>
+                    <th>  ticker_symbol  </th>
+                    <th>  legal_name  </th>
+                    <th>  current_share_price  </th>
+                    <th>  total_number_shares  </th>
+                    <th>  shares_avail  </th>
+                    <th>  initial_offering_price  </th>
+                    <th>  Sector  </th>
+                    <th>  Add To Current Fund Price </th>
+                </tr>
+            </thead>
+            <tbody> 
+                {% if stonk_data%}
+                {% for s_row in results %}
+                    <tr>
+                        <td>{{  s_row.id  }}</td>
+                        <td>{{  s_row.ticker_symbol  }}</td>
+                        <td>{{  s_row.legal_name  }}</td>
+                        <td>$ {{  s_row.current_share_price  }}</td>
+                        <td>{{  s_row.total_number_shares  }}</td>
+                        <td>{{  s_row.shares_avail  }}</td>
+                        <td>${{ s_row.initial_offering_price  }}</td>
+                        <td>{{  s_row.sector_id  }}</td>
+                        <td>
+                            <a href="{{url_for('addHoldings', id=s_row.id)}}">
+                                <button type="button">Add</button></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                {% endif %}
+            </tbody>
+        </table>
+        </div>
+
+
+
 
 {% endblock %}
