--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,12 +17,12 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <li><a href="{{ url_for('admin_holdings') }}">{{ ('All Holdings') }}</a></li>
                     <li><a href="{{ url_for('mutualFunds') }}">{{ ('Mutual Funds') }}</a></li>
-                    <li><a href="{{ url_for('view_stocks') }}">{{ ('Stocks') }}</a></li>
+                    <li><a href="{{ url_for('stocks') }}">{{ ('Stocks') }}</a></li>
                     <li><a href="{{ url_for('sectors') }}">{{ ('Sectors') }}</a></li>
+                    <li><a href="{{ url_for('graphSectors') }}">{{ ('Portfolio Sector Breakdown') }}</a></li>
                     <li><a href="{{ url_for('admin') }}">{{ ('Admin') }}</a></li>
-                    <li><a href="{{ url_for('viewPortfolioHoldings') }}">{{ ('Portfolio Holdings') }}</a></li>
-                    <li><a href="{{ url_for('graphSectors') }}">{{ ('graphSectors') }}</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
