--- a/app/templates/graphSectors.html
+++ b/app/templates/graphSectors.html
@@ -2,27 +2,30 @@
 {% block content %}
 <head>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <script type="text/javascript">
-    google.charts.load('current', {'packages':['corechart']});
-    google.charts.setOnLoadCallback(drawChart);
-    function drawChart() {
-      var data = google.visualization.arrayToDataTable([
-        ['Task', 'Hours per Day'],
-        ['Work',     11],
-        ['Eat',      2],
-        ['Commute',  2],
-        ['Watch TV', 2],
-        ['Sleep',    7]
-      ]);
-      var options = {
-        title: 'My Daily Activities'
-      };
-      var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-      chart.draw(data, options);
-    }
-  </script>
+  {{  charts_init }}
 </head>
+
 <body>
-  <div id="piechart" style="width: 900px; height: 500px;"></div>
+  
+  <!-- Block to test row input -->
+  <!-- {%  if stock_sects %}
+    <div class="container">
+      <ul> 
+        {{sect_out}}
+      {% for row in sect_out %}
+          <li> I am a row:  {{row}}  </li>
+        {%  endfor  %}
+      </ul>  
+    </div>
+  {%  endif  %} -->
+
+
+  <div class="container">
+    {{  charts.my_chart }}
+  </div>
+
+
+
 </body>
+
 {% endblock %}
