--- a/app/templates/mutualFunds.html
+++ b/app/templates/mutualFunds.html
@@ -1,20 +1,8 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
+{% block app_content %}
 
-<div class="container">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        {% for message in messages %}
-        <div class="alert alert-info" role="alert">{{ message }}</div>
-        {% endfor %}
-    {% endif %}
-    {% endwith %}
-
-    {# application content needs to be provided in the app_content block #}
-    {% block app_content %}{% endblock %}
-</div>
 <div class="table-responsive" >
     <table class="table">
         <thead>
@@ -23,11 +11,11 @@
                 <th>  ID  </th>
                 <th>  name  </th>
                 <th>  initial_investment_amt  </th>
+                <th>  nav  </th>
+                <th>  Shares Outstanding  </th>
                 <th>  dollars_available  </th>
                 <th>  dollars_invested  </th>
-                <th>  mf_share_price  </th>
                 <th>  total_mf_sector  </th>
-                <th>  portfolio id  </th>
                 <th>  Edit/Delete  </th> 
                 <th>  Stocks  </th>
                 <th>  Current Fund Price  </th>
@@ -41,11 +29,11 @@
                     <td>{{  mf_row.id  }}</td>
                     <td>{{  mf_row.name  }}</td>
                     <td>${{  mf_row.initial_investment_amt  }}</td>
+                    <td>${{  mf_row.nav  }}</td>
+                    <td>{{  mf_row.shares_outstanding  }}</td>
                     <td>${{  mf_row.dollars_available  }}</td>
                     <td>${{  mf_row.dollars_invested  }}</td>
-                    <td>${{  mf_row.mf_share_price  }}</td>
                     <td>{{  mf_row.total_mf_sector  }}%</td>
-                    <td> {{  mf_row.portfolio_id  }} </td>
                     <td>
                         <a href="{{url_for('editMutualFunds', id=mf_row.id)}}">
                             <button type="button">  Edit  </button></a>
@@ -60,7 +48,7 @@
                     </td>
                     <td>  
                         <a href="{{url_for('currentFundPrice', id=mf_row.id)}}">
-                            <button type="button">CFP</button></a>
+                            <button type="button">View CFP</button></a>
                     </td>
                 </tr>
             {% endfor %}
@@ -77,10 +65,10 @@
                 <th>  id  </th>
                 <th>  ticker_symbol  </th>
                 <th>  legal_name  </th>
-                <th>  total_shares_circulation  </th>
-                <th>  total_shares_available  </th>
-                <th>  initial_price  </th>
-                <th>  current_price  </th>
+                <th>  current_share_price  </th>
+                <th>  total_number_shares  </th>
+                <th>  shares_avail  </th>
+                <th>  initial_offering_price  </th>
                 <th>  sector  </th>
             </tr>
         </thead>
@@ -91,10 +79,10 @@
                     <td>{{  s_row.id  }}</td>
                     <td>{{  s_row.ticker_symbol  }}</td>
                     <td>{{  s_row.legal_name  }}</td>
-                    <td>{{  s_row.total_shares_circulation  }}</td>
-                    <td>{{  s_row.total_shares_available  }}</td>
-                    <td>{{  s_row.initial_price  }}</td>
-                    <td>${{ s_row.current_price  }}</td>
+                    <td>$ {{  s_row.current_share_price  }}</td>
+                    <td>{{  s_row.total_number_shares  }}</td>
+                    <td>{{  s_row.shares_avail  }}</td>
+                    <td>${{ s_row.initial_offering_price  }}</td>
                     <td>{{  s_row.sector_id  }}</td>
                 </tr>
             {% endfor %}
@@ -104,6 +92,7 @@
 </div>
 {% endif %}
 
+
 {% if grow%}
 <h3>Add Mutual Funds</h3>
 <div class="row">
@@ -112,5 +101,7 @@
     </div>
 </div>
 {% endif %}
+
+
 
 {% endblock %}
