--- a/app/templates/sectors.html
+++ b/app/templates/sectors.html
@@ -1,14 +1,19 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
+{% block app_content %}
+
 <div class="table-responsive" >
     <table class="table">
         <thead>
+            <caption>  Sectors  </caption>
             <tr>
                 <th>  id  </th>
                 <th>  name  </th>
                 <th>  Edit/Delete  </th>
+                {%  if admin_thead  %}
+                <th>  Add  </th>
+                {%  endif  %}
             </tr>
         </thead>
         <tbody> 
@@ -23,15 +28,22 @@
                         <a href="{{url_for('deleteStocks', id=sect_row.id)}}">
                             <button type="button">  Delete  </button></a>
                     </td>
-                    
+                    {%  if  admin_td  %}
+                    <td> 
+                        <a href="{{url_for('editStocks', id=sect_row.id)}}">
+                            <button type="button">  Add  </button></a>
+                    </td>
+                    {%  endif  %}
                 </tr>
             {% endfor %}
             {% endif %}
         </tbody>
     </table>
     </div>
+    
 
-{% if grow%}
+
+{% if entity_home %}
 <h3>Add Sector</h3>
 <div class="row">
     <div class="col-md-4">
@@ -39,4 +51,6 @@
     </div>
 </div>
 {% endif %}
+
+
 {% endblock %}
