--- a/app/templates/graphSectors.html
+++ b/app/templates/graphSectors.html
@@ -8,16 +8,16 @@
 <body>
   
   <!-- Block to test row input -->
-  <!-- {%  if stock_sects %}
+  {%  if stock_sects %}
     <div class="container">
       <ul> 
         {{sect_out}}
-      {% for row in sect_out %}
-          <li> I am a row:  {{row}}  </li>
+        {% for row in sect_out %}
+        <li> {{row}}  </li>
         {%  endfor  %}
       </ul>  
     </div>
-  {%  endif  %} -->
+  {%  endif  %}
 
 
   <div class="container">
